src/test/ui/issues/issue-50480.stderr
error[E0412]: cannot find type `NotDefined` in this scope
  --> $DIR/issue-50480.rs:13:12
   |
LL | struct Foo(NotDefined, <i32 as Iterator>::Item, Vec<i32>, String);
   |            ^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `i32: std::iter::Iterator` is not satisfied
  --> $DIR/issue-50480.rs:13:24
   |
LL | struct Foo(NotDefined, <i32 as Iterator>::Item, Vec<i32>, String);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^ `i32` is not an iterator; maybe try calling `.iter()` or a similar method
   |
   = help: the trait `std::iter::Iterator` is not implemented for `i32`

error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/issue-50480.rs:11:17
   |
LL | #[derive(Clone, Copy)]
   |                 ^^^^
LL | //~^ ERROR the trait `Copy` may not be implemented for this type
LL | struct Foo(NotDefined, <i32 as Iterator>::Item, Vec<i32>, String);
   |                                                 --------  ------ this field does not implement `Copy`
   |                                                 |
   |                                                 this field does not implement `Copy`

error: aborting due to 3 previous errors

Some errors occurred: E0204, E0277, E0412.
For more information about an error, try `rustc --explain E0204`.
